:memo: add javadoc and checkstyle report, :arrow_up: upgrade dependencies & :ambulance: fixed WAR packaging